@@ -4,10 +4,10 @@ NAME
 
 SYNOPSIS
 
-        github_backup \
+        github-backup \
             --user stevieb9 \
             --token 003e12e0780025889f8da286d89d144323c20c1ff7 \
-            --dir /home/steve/github_backup \
+            --dir /home/steve/github-backup \
             --repos \
             --issues
     
@@ -16,7 +16,7 @@ SYNOPSIS
     
         export GITHUB_TOKEN=003e12e0780025889f8da286d89d144323c20c1ff7
     
-        github_backup -u stevieb9 -d ~/github_backup -r
+        github-backup -u stevieb9 -d ~/github-backup -r
 
 DESCRIPTION
 
